Fix Plory SVG on login page

--- a/darkmode/stylus.css
+++ b/darkmode/stylus.css
@@ -84,7 +84,7 @@ div[type="streak"] {
 .css-3ls0qn-SubheadingDesc {color:#999;}
 .css-thfwq5-Subheading {color:#ccc;}
 rect[fill="#eeeeee"] {fill:#444;}
-*[fill="#ffffff"], *[fill="white"], *[fill="#fff"] {fill:#111;}
+*[fill="#ffffff"], *[fill="white"] {fill:#111;}
 path[fill="#505050"] {fill:#ccc !important;}
 *[opacity="0.15"] {opacity:0.4;}
 .css-xaul9o-gridTemplate-ButtonLayoutCss {
