--- a/darkmode/stylus.css
+++ b/darkmode/stylus.css
@@ -80,6 +80,7 @@ div[type="streak"] {
 }
 
 /* fixes & improvements */
+#continue-button-button {background:rgb(71, 234, 109)}
 .css-1xyyo8g-PreviousStreakBox {background:#222;}
 .css-3ls0qn-SubheadingDesc {color:#999;}
 .css-thfwq5-Subheading {color:#ccc;}
